Early home page stuff

--- a/app/views/projects/_placard_panel.html.haml
+++ b/app/views/projects/_placard_panel.html.haml
@@ -8,4 +8,4 @@
         = link_to "Change City", "#"
   .row
     - projects.each do |p|
-      = render :partial => 'home/placard', :locals => {:project => p}
+      = render :partial => 'projects/placard', :locals => {:project => p}
