New page templates

--- a/app/views/donors/index.en.html.erb
+++ b/app/views/donors/index.en.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div id="profile-info">
     <div class="container">
-      <img src="assets/img/pictures/profile-photo.jpg" alt="">
+      <%= image_tag 'pictures/profile-photo.jpg' %>
       <dl>
         <dt>William Hauver</dt>
         <dd>
@@ -54,7 +54,7 @@
           <tr>
             <td>Sun Oct 07'12</td>
             <td>
-              <img src="assets/img/pictures/recent-1.jpg" alt="">
+              <%= image_tag 'pictures/recent-1.jpg' %>
               <strong>High Bar</strong>
 
               <div class="vote">
@@ -102,7 +102,8 @@
           <tr>
             <td>Sun Oct 07'12</td>
             <td>
-              <img src="assets/img/pictures/recent-1.jpg" alt="">
+              <%= image_tag 'pictures/recent-1.jpg' %>
+
               <strong>High Bar</strong>
 
               <div class="vote">
@@ -150,7 +151,8 @@
           <tr>
             <td>Sun Oct 07'12</td>
             <td>
-              <img src="assets/img/pictures/recent-1.jpg" alt="">
+              <%= image_tag 'pictures/recent-1.jpg' %>
+
               <strong>High Bar</strong>
 
               <div class="vote">
@@ -198,7 +200,8 @@
           <tr>
             <td>Sun Oct 07'12</td>
             <td>
-              <img src="assets/img/pictures/recent-1.jpg" alt="">
+              <%= image_tag 'pictures/recent-1.jpg' %>
+
               <strong>High Bar</strong>
 
               <div class="vote">
