--- a/app/views/projects/_billboard.html.erb
+++ b/app/views/projects/_billboard.html.erb
@@ -22,7 +22,7 @@
 <div class="tab-pane active" id="tab1">
   <div class="main-banner">
     <a href="<%=  project_path(project) %>">
-      <%= project.display_image %>
+      <%= project.large_display_image %>
     </a>
     <div class="caption">
       <a href="<%=  project_path(project) %>" class="btn-middle pull-right">View project</a>
