--- a/app/views/cause_owners/show.en.html.erb
+++ b/app/views/cause_owners/show.en.html.erb
@@ -4,11 +4,11 @@
   <div id="profile-tabs">
     <div class="container">
       <ul>
-        <li><a href="profile_tab_view.html">Profile</a></li>
-        <li><a href="Donor_tab_view.html">Donor</a></li>
-        <li class="active"><a href="cause-owner_view_tab.html">Cause Owner</a></li>
-        <li><a href="student-Cofunder_tab_edit.html">Student Co-Founder</a></li>
-        <li><a href="sponsor_tab_edit.html">Sponsor</a></li>
+        <li><a href="/en/profiles/1">Profile</a></li>
+        <li><a href="/en/donors">Donor</a></li>
+        <li class="active"><a href="/cause_owners/1">Cause Owner</a></li>
+        <li><a href="/student_cofunders/1">Student Co-Founder</a></li>
+        <li><a href="/sponsors/1">Sponsor</a></li>
       </ul>
     </div>
   </div>
@@ -25,7 +25,7 @@
           </div>
         </dd>
       </dl>
-      <a href="cause-owner_edit.html" class="btn-gray">Edit Information</a>
+      <a href="/cause_owners/1/edit" class="btn-gray">Edit Information</a>
     </div>
   </div>
 </section>
