--- a/app/views/donors/contributions/levels/show.html.erb
+++ b/app/views/donors/contributions/levels/show.html.erb
@@ -52,9 +52,9 @@
 <div id="form-steps" class="standalone">
   <div class="container">
     <ul>
-      <li class="c1 active"><a href="coupon_purchase_page.html"><span>1</span>Contribute</a></li>
-      <li class="c2"><a href="step_2_confirm_and_pay.html"><span>2</span>Pay</a></li>
-      <li class="c3"><a href="donate_coupon_share.html"><span>3</span>Share</a></li>
+      <li class="c1 active"><a href="/donors/1/contributions/1/level"><span>1</span>Contribute</a></li>
+      <li class="c2"><a href="/donors/1/contributions/1/pay"><span>2</span>Pay</a></li>
+      <li class="c3"><a href="/donors/1/contributions/1/share"><span>3</span>Share</a></li>
     </ul>
   </div>
 </div>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="bottom-line-buttons">
-      <a href="step_2_confirm_and_pay.html" class="btn-large pull-right">Continue</a>
+      <a href="/donors/1/contributions/1/pay" class="btn-large pull-right">Continue</a>
     </div>
   </div>
 </section><!-- #page -->
