--- a/app/views/donors/index.en.html.erb
+++ b/app/views/donors/index.en.html.erb
@@ -5,11 +5,11 @@
   <div id="profile-tabs">
     <div class="container">
       <ul>
-        <li><a href="profile_tab_view.html">Profile</a></li>
-        <li class="active"><a href="Donor_tab_view.html">Donor</a></li>
-        <li><a href="cause-owner_view_tab.html">Cause Owner</a></li>
-        <li><a href="student-Cofunder_tab_edit.html">Student Co-Founder</a></li>
-        <li><a href="sponsor_tab_edit.html">Sponsor</a></li>
+        <li><a href="/en/profiles/1">Profile</a></li>
+        <li class="active"><a href="/en/donors">Donor</a></li>
+        <li><a href="Campaign-owner_view_tab.html">Campaign Owner</a></li>
+        <li><a href="/student_cofunders/1">Student Co-Founder</a></li>
+        <li><a href="/sponsors/1">Sponsor</a></li>
       </ul>
     </div>
   </div>
@@ -37,7 +37,7 @@
 
       <div id="donor-view" class="span12">
 
-        <h2>Causes I have Donated to</h2>
+        <h2>Campaigns I have Donated to</h2>
 
         <table>
           <thdead>
@@ -46,7 +46,7 @@
               <th>Campaign</th>
               <th>Amount</th>
               <th>Perk</th>
-              <th>Social Cause Credit</th>
+              <th>Social Campaign Credit</th>
               <th>Visibility</th>
             </tr>
           </thdead>
@@ -68,7 +68,7 @@
               Level 1 Coupons
               <big><strong>Value $85</strong></big>
             </td>
-            <td>5</td>
+            <td>5 Points</td>
             <td>
               <fieldset class="custom-radio">
                 <input type="radio" name="visibility" id="type-a1">
@@ -94,7 +94,7 @@
               <th>Campaign</th>
               <th>Amount</th>
               <th>Perk</th>
-              <th>Social Cause Credit</th>
+              <th>Social Campaign Credit</th>
               <th>Visibility</th>
             </tr>
           </thdead>
@@ -117,7 +117,7 @@
               Level 1 Coupons
               <big><strong>Value $85</strong></big>
             </td>
-            <td>5</td>
+            <td>5 Points</td>
             <td>
               <fieldset class="custom-radio">
                 <input type="radio" name="visibility" id="type-b1">
@@ -143,7 +143,7 @@
               <th>Campaign</th>
               <th>Amount</th>
               <th>Perk</th>
-              <th>Social Cause Credit</th>
+              <th>Social Campaign Credit</th>
               <th>Visibility</th>
             </tr>
           </thdead>
@@ -166,7 +166,7 @@
               Level 1 Coupons
               <big><strong>Value $85</strong></big>
             </td>
-            <td>5</td>
+            <td>5 Points</td>
             <td>
               <fieldset class="custom-radio">
                 <input type="radio" name="visibility" id="type-c1">
@@ -192,7 +192,7 @@
               <th>Campaign</th>
               <th>Amount</th>
               <th>Perk</th>
-              <th>Social Cause Credit</th>
+              <th>Social Campaign Credit</th>
               <th>Visibility</th>
             </tr>
           </thdead>
@@ -215,7 +215,7 @@
               Level 1 Coupons
               <big><strong>Value $85</strong></big>
             </td>
-            <td>5</td>
+            <td>5 Points</td>
             <td>
               <fieldset class="custom-radio">
                 <input type="radio" name="visibility" id="type-d1">
