--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,8 @@
     <nav id="main-navigation">
       <ul>
         <li><a href="mission.html">What is <br>FUENO?</a></li>
-        <li><a href="start.html">Start <span>new campaign</span></a></li>
-        <li><a href="search_for_a_cause.html">Sponsor <span>a great cause</span></a></li>
+        <li><a href="/campaigners/1/campaigns/1/start">Start <span>new campaign</span></a></li>
+        <li><a href="/campaign_searches/new">Sponsor <span>a great cause</span></a></li>
         <li><a href="#">Co-Fund <span>your education</span></a></li>
       </ul>
     </nav>
@@ -38,12 +38,12 @@
             <a href="#">Username <b class="caret"></b></a>
             <ul>
               <li><strong>My Account</strong></li>
-              <li><a href="profile_tab_view.html">My Profile</a></li>
-              <li><a href="profile_tab_edit.html">Edit Settings</a></li>
-              <li><a href="Donor_tab_view.html">My Donations</a></li>
-              <li><a href="cause-owner_view_tab.html">My Causes</a></li>
+              <li><a href="/en/profiles/1">My Profile</a></li>
+              <li><a href="/en/profiles/1/edit">Edit Settings</a></li>
+              <li><a href="/en/donors">My Donations</a></li>
+              <li><a href="/cause_owners/1">My Causes</a></li>
               <li><a href="sponsor_page.html">My Sponsorship</a></li>
-              <li><a href="student-Cofunder_tab_edit.html">Student CoFunder</a></li>
+              <li><a href="/student_cofunders/1">Student CoFunder</a></li>
               <li class="logout-link"><a href="homepage.html">Log Out</a></li>
             </ul>
           </li>
