--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -262,7 +262,7 @@
         This campaign will receive all of the funds contributed by Thu Oct 18 at 11:59PM PT.
       </div>
       <div class="submit">
-        <a href="coupon_purchase_page.html" class="btn-large">Contribute Now</a>
+        <a href="/donors/1/contributions/1/level" class="btn-large">Contribute Now</a>
       </div>
     </div>
 
