--- a/app/views/campaigners/campaigns/sponsors/show.en.html.erb
+++ b/app/views/campaigners/campaigns/sponsors/show.en.html.erb
@@ -13,11 +13,11 @@
                        <div class="box">
                            <h1>Untitled Draft Project</h1>
                            <ul>
-                               <li class="s1"><a href="start.html"><span>1</span>Start</a></li>
-                               <li class="s2"><a href="design.html"><span>2</span>Design</a></li>
-                               <li class="s3"><a href="ignite.html"><span>3</span>Ignite</a></li>
-                               <li class="s4 active"><a href="get_sponsored.html"><span>4</span>Get Sponsored</a></li>
-                               <li class="s5"><a href="get-funded.html"><span>5</span>Get Funded</a></li>
+                               <li class="s1"><a href="/campaigners/1/campaigns/1/start"><span>1</span>Start</a></li>
+                               <li class="s2"><a href="/campaigners/1/campaigns/1/design"><span>2</span>Design</a></li>
+                               <li class="s3"><a href="/campaigners/1/campaigns/1/ignite"><span>3</span>Ignite</a></li>
+                               <li class="s4 active"><a href="/campaigners/1/campaigns/1/sponsor"><span>4</span>Get Sponsored</a></li>
+                               <li class="s5"><a href="/campaigners/1/campaigns/1/fund"><span>5</span>Get Funded</a></li>
 	                    </ul>
 	                    <h3>Sponsors</h3>
 	                    <p>Congratulations! You’re now ready for the next step: letting people know why they should fund your campaign.</p>
