--- a/app/views/profiles/show.en.html.erb
+++ b/app/views/profiles/show.en.html.erb
@@ -3,11 +3,11 @@
     <div id="profile-tabs">
         <div class="container">
             <ul>
-                <li class="active"><a href="profile_tab_view.html">Profile</a></li>
-                <li><a href="Donor_tab_view.html">Donor</a></li>
-                <li><a href="cause-owner_view_tab.html">Cause Owner</a></li>
-                <li><a href="student-Cofunder_tab_edit.html">Student Co-Founder</a></li>
-                <li><a href="sponsor_tab_edit.html">Sponsor</a></li>
+                <li class="active"><a href="/en/profiles/1">Profile</a></li>
+                <li><a href="/en/donors">Donor</a></li>
+                <li><a href="/cause_owners/1">Cause Owner</a></li>
+                <li><a href="/student_cofunders/1">Student Co-Founder</a></li>
+                <li><a href="/sponsors/1">Sponsor</a></li>
             </ul>
         </div>
     </div>
@@ -23,7 +23,7 @@
                     </div>
                 </dd>
             </dl>
-            <a href="profile_tab_edit.html" class="btn-gray">Edit Information</a>
+            <a href="/en/profiles/1/edit" class="btn-gray">Edit Information</a>
         </div>
     </div>
 </section>
