More file linking

--- a/app/views/donors/contributions/payments/show.html.erb
+++ b/app/views/donors/contributions/payments/show.html.erb
@@ -49,9 +49,9 @@
 <div id="form-steps" class="standalone">
     <div class="container">
         <ul>
-            <li class="c1"><a href="donate_coupon_contribute(start).html"><span>1</span>Contribute</a></li>
-            <li class="c2 active"><a href="donate_coupon_pay.html"><span>3</span>Pay</a></li>
-            <li class="c3"><a href="coupon_share.html"><span>4</span>Share</a></li>
+            <li class="c1"><a href="/donors/1/contributions/1/level"><span>1</span>Contribute</a></li>
+            <li class="c2 active"><a href="/donors/1/contributions/1/pay"><span>3</span>Pay</a></li>
+            <li class="c3"><a href="/donors/1/contributions/1/share"><span>4</span>Share</a></li>
         </ul>
     </div>
 </div>
