--- a/app/views/donors/contributions/shares/show.html.erb
+++ b/app/views/donors/contributions/shares/show.html.erb
@@ -33,9 +33,9 @@
 <div id="form-steps" class="standalone three-items">
     <div class="container">
         <ul>
-            <li class="c1"><a href="coupon_start.html"><span>1</span>Start</a></li>
-            <li class="c2"><a href="coupon_set_up.html"><span>2</span>Coupon Set Up</a></li>
-            <li class="c3 active"><a href="coupon_share.html"><span>3</span>Share</a></li>
+            <li class="c1"><a href="/sponsors/1/sponsorships/1/start"><span>1</span>Start</a></li>
+            <li class="c2"><a href="/sponsors/1/sponsorships/1/coupon"><span>2</span>Coupon Set Up</a></li>
+            <li class="c3 active"><a href="/donors/1/contributions/1/share"><span>3</span>Share</a></li>
         </ul>
     </div>
 </div>
