--- a/app/views/sponsors/matchings/starts/show.en.html.erb
+++ b/app/views/sponsors/matchings/starts/show.en.html.erb
@@ -33,10 +33,10 @@
 <div id="form-steps" class="standalone">
     <div class="container">
         <ul>
-            <li class="d1 active"><a href="matching_start.html"><span>1</span>Start</a></li>
-            <li class="d2"><a href="matching_choice.html"><span>2</span>Matching Choice</a></li>
-            <li class="d3"><a href="matching_pay.html"><span>3</span>Pay</a></li>
-            <li class="d4"><a href="matching_share.html"><span>4</span>Share</a></li>
+            <li class="d1 active"><a href="/sponsors/1/matchings/1/start"><span>1</span>Start</a></li>
+            <li class="d2"><a href="/sponsors/1/matchings/1/choose"><span>2</span>Matching Choice</a></li>
+            <li class="d3"><a href="/sponsors/1/matchings/1/pay"><span>3</span>Pay</a></li>
+            <li class="d4"><a href="/sponsors/1/matchings/1/share"><span>4</span>Share</a></li>
         </ul>
     </div>
 </div>
@@ -104,7 +104,7 @@
          </section>
 
             <div class="span12 bottom-line-buttons">
-                <a href="matching_choice.html" class="btn-fancy"><span>2</span>Matching Choice</a>
+                <a href="/sponsors/1/matchings/1/choose" class="btn-fancy"><span>2</span>Matching Choice</a>
                 <a href="#" class="btn-gold">Save</a>
             </div>
 
