--- a/app/views/cause_owners/edit.en.html.erb
+++ b/app/views/cause_owners/edit.en.html.erb
@@ -118,7 +118,7 @@
         </div>
 
         <div class="span12 bottom-line-buttons">
-          <a class="btn-gold" href="cause-owner_view_tab.html">Save</a>
+          <a class="btn-gold" href="/cause_owners/1">Save</a>
         </div>
 
       </form>
