--- a/app/views/sponsors/sponsorships/starts/show.html.erb
+++ b/app/views/sponsors/sponsorships/starts/show.html.erb
@@ -33,9 +33,9 @@
 <div id="form-steps" class="standalone three-items">
     <div class="container">
         <ul>
-            <li class="c1 active"><a href="coupon_start.html"><span>1</span>Start</a></li>
-            <li class="c2"><a href="coupon_set_up.html"><span>2</span>Coupon Set Up</a></li>
-            <li class="c3"><a href="coupon_share.html"><span>3</span>Share</a></li>
+            <li class="c1 active"><a href="/sponsors/1/sponsorships/1/start"><span>1</span>Start</a></li>
+            <li class="c2"><a href="/sponsors/1/sponsorships/1/coupon"><span>2</span>Coupon Set Up</a></li>
+            <li class="c3"><a href="/donors/1/contributions/1/share"><span>3</span>Share</a></li>
         </ul>
     </div>
 </div>
@@ -103,7 +103,7 @@
          </section>
 
             <div class="span12 bottom-line-buttons">
-                <a href="coupon_set_up.html" class="btn-fancy"><span>2</span>Coupon Set Up</a>
+                <a href="/sponsors/1/sponsorships/1/coupon" class="btn-fancy"><span>2</span>Coupon Set Up</a>
                 <a href="#" class="btn-gold">Save</a>
             </div>
         
