Initial campaign creation stuff

--- a/app/views/campaigners/campaigns/starts/show.en.html.erb
+++ b/app/views/campaigners/campaigns/starts/show.en.html.erb
@@ -27,71 +27,15 @@
         </div>
 
         <!-- Box -->
-        <div class="box-container profile-edit span12">
-          <br>
-
-          <h2>Student Co-Founder Information</h2>
-
-          <div class="box">
-            <fieldset>
-              <label for="name"><strong>Name</strong></label>
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-            </fieldset>
-            <fieldset>
-              <label for="name"><strong>Username</strong></label>
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-            </fieldset>
-            <fieldset>
-              <label for="name"><strong>E-mail</strong></label>
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-            </fieldset>
-          </div>
-        </div>
-
-        <!-- Box -->
         <div class="box-container profile-edit span12" id="cause-owner">
-          <h2>Cause Owner</h2>
+          <h2>Identify the cause your campaign will benefit</h2>
 
           <div class="box">
             <fieldset>
-              <label for="name" class="wide"><strong>First Step: Cause Owner Lookup</strong></label>
+              <label for="name" class="wide"><strong>Cause</strong></label>
               <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
               <input type="submit" value="Search" origname="facebook" name="useritem[useritem][facebook]" class="btn-middle">
             </fieldset>
-            <hr>
-            <h3>Cause Owner Information</h3>
-            <fieldset>
-              <label for="name"><strong>Name</strong></label>
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-            </fieldset>
-            <fieldset>
-              <label for="name"><strong>Address</strong></label>
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-very-large">
-              <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-            </fieldset>
-            <div>
-              <div class="box-half">
-                <fieldset>
-                  <label for="name"><strong>Contact Number</strong></label>
-                  <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-                </fieldset>
-                <fieldset>
-                  <label for="name"><strong>Account Name</strong></label>
-                  <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-                </fieldset>
-              </div>
-              <div class="box-half">
-                <fieldset>
-                  <label for="name"><strong>Email</strong></label>
-                  <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-                </fieldset>
-                <fieldset>
-                  <label for="name"><strong>Account №</strong></label>
-                  <input type="text" origname="facebook" name="useritem[useritem][facebook]" class="size-large">
-                </fieldset>
-              </div>
-            </div>
           </div>
         </div>
 
