--- a/app/views/profiles/edit.en.html.erb
+++ b/app/views/profiles/edit.en.html.erb
@@ -8,7 +8,7 @@
         <li class="active"><a href="/en/profiles/1">Profile</a></li>
         <li><a href="/en/donors">Donor</a></li>
         <li><a href="/cause_owners/1">Cause Owner</a></li>
-        <li><a href="/student_cofunders/1">Student Co-Founder</a></li>
+        <li><a href="/student_cofunders/1">Student Co-Funder</a></li>
         <li><a href="/sponsors/1">Sponsor</a></li>
       </ul>
     </div>
