--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
       </div>
       <div class="span3">
         <ul class="account-details">
-          <li><strong>Student Co-Founder:</strong></li>
+          <li><strong>Student Co-Funder:</strong></li>
           <li class="list-heading">
             <%= image_tag('pictures/college.jpg') %>
             <%= image_tag('pictures/a-small.jpg') %>
@@ -39,7 +39,7 @@
   <li><a href="#tab3" data-toggle="tab">Comments</a></li>
   <li><a href="#tab4" data-toggle="tab">Sponsors</a></li>
   <li><a href="#tab5" data-toggle="tab">Funders</a></li>
-  <li><a href="#tab6" data-toggle="tab">Co-Founder</a></li>
+  <li><a href="#tab6" data-toggle="tab">Co-Funder</a></li>
 </ul>
 
 <div class="container">
@@ -107,7 +107,7 @@
       <div class="box" id="team">
         <div class="inner">
           <ul class="account-details">
-            <li><strong>Student Co-Founder:</strong></li>
+            <li><strong>Student Co-Funder:</strong></li>
             <li class="list-heading">
               <%= image_tag('pictures/avatar-1.jpg') %>
               <strong>Warren Etheredge</strong><br>
