--- a/app/views/sponsors/matchings/choices/show.en.html.erb
+++ b/app/views/sponsors/matchings/choices/show.en.html.erb
@@ -13,7 +13,7 @@
             </div>
             <div class="span3">
                 <ul class="account-details">
-                    <li><strong>Student Co-Founder:</strong></li>
+                    <li><strong>Student Co-Funder:</strong></li>
                     <li class="list-heading">
                         <img src="assets/img/pictures/college.jpg" alt="">
                         <img src="assets/img/pictures/a-small.jpg" alt="">
