--- a/app/views/campaign_searches/new.en.html.erb
+++ b/app/views/campaign_searches/new.en.html.erb
@@ -73,7 +73,7 @@
 
                                <div class="box-half" id="team">
                                    <ul class="account-details">
-                                       <li><strong>Student Co-Founder:</strong></li>
+                                       <li><strong>Student Co-Funder:</strong></li>
                                        <li class="list-heading">
                                            <img alt="" src="/assets/pictures/avatar-1.jpg">
                                            <strong>Warren Etheredge</strong><br>
