--- a/app/views/cause_owners/show.en.html.erb
+++ b/app/views/cause_owners/show.en.html.erb
@@ -7,7 +7,7 @@
         <li><a href="/en/profiles/1">Profile</a></li>
         <li><a href="/en/donors">Donor</a></li>
         <li class="active"><a href="/cause_owners/1">Cause Owner</a></li>
-        <li><a href="/student_cofunders/1">Student Co-Founder</a></li>
+        <li><a href="/student_cofunders/1">Student Co-Funder</a></li>
         <li><a href="/sponsors/1">Sponsor</a></li>
       </ul>
     </div>
@@ -57,7 +57,7 @@
 
           <div class="box-half" id="team">
             <ul class="account-details">
-              <li><strong>Student Co-Founder:</strong></li>
+              <li><strong>Student Co-Funder:</strong></li>
               <li class="list-heading">
                 <%= image_tag('pictures/avatar-1.jpg') %>
                 <strong>Warren Etheredge</strong><br>
@@ -130,7 +130,7 @@
 
           <div class="box-half" id="team">
             <ul class="account-details">
-              <li><strong>Student Co-Founder:</strong></li>
+              <li><strong>Student Co-Funder:</strong></li>
               <li class="list-heading">
                 <%= image_tag('pictures/avatar-1.jpg') %>
                 <strong>Warren Etheredge</strong><br>
