--- a/app/views/donors/index.en.html.erb
+++ b/app/views/donors/index.en.html.erb
@@ -8,7 +8,7 @@
         <li><a href="/en/profiles/1">Profile</a></li>
         <li class="active"><a href="/en/donors">Donor</a></li>
         <li><a href="Campaign-owner_view_tab.html">Campaign Owner</a></li>
-        <li><a href="/student_cofunders/1">Student Co-Founder</a></li>
+        <li><a href="/student_cofunders/1">Student Co-Funder</a></li>
         <li><a href="/sponsors/1">Sponsor</a></li>
       </ul>
     </div>
