--- a/app/views/sponsors/sponsorships/starts/show.html.erb
+++ b/app/views/sponsors/sponsorships/starts/show.html.erb
@@ -13,7 +13,7 @@
             </div>
             <div class="span3">
                 <ul class="account-details">
-                    <li><strong>Student Co-Founder:</strong></li>
+                    <li><strong>Student Co-Funder:</strong></li>
                     <li class="list-heading">
                         <%= image_tag "pictures/college.jpg" %>
                         <%= image_tag "pictures/a-small.jpg" %>
