--- a/app/views/campaign_worksheets/new.html.erb
+++ b/app/views/campaign_worksheets/new.html.erb
@@ -90,7 +90,7 @@
                           :input_html => {:class => "span6"} %>
               <%= f.input :pitch,
                           :placeholder => 'Your pitch!',
-                          :input_html => {:class => "span8", :rows => 8} %>
+                          :input_html => {:class => " ckeditor span8", :rows => 8} %>
 
             </div>
 
